# emulator

./: .gitignore  CMakeLists.txt
lib/catch/: catch.hpp
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
src/: Audio.h  Cartridge.cpp  Cartridge.h  Display.cpp  Display.h  Gameboy.cpp  Gameboy.h  Interrupt.cpp  Interrupt.h  Joypad.h  LR35902.cpp  LR35902.h  MemoryBus.cpp  MemoryBus.h  RegisterPair.h  Render.cpp  Render.h  Serial.cpp  Serial.h  Timer.cpp  Timer.h  cb_instructions.cpp  file-utils.cpp  file-utils.h  instructions.cpp  main.cpp
src/cpu/: LR35902.cpp  LR35902.h
src/cpu/instructions/interpreter/: cb_interpreter.cpp  interpreter.cpp
tests/: tests-cartridge.cpp  tests-files.cpp  tests-lr35902.cpp  tests-suite.cpp
tests/res/: dummy_mbc1.gb  dummy_mbc1_ram.gb  dummy_rom_only.gb  test-files-reading.txt
